force-app/main/default/objects/xDO_Demo_Helper__e/xDO_Demo_Helper__e.object-meta.xml
<CustomObject>
    <label>Demo Helper</label>
    <pluralLabel>Demo Helpers</pluralLabel>
</CustomObject>