force-app/main/default/objects/xDO_Demo_Helper__e/fields/Old_Demo_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Demo_Config_Id__c</fullName>
    <label>Old Demo Config Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>